Change app category text

--- a/views/generic/also_by.html
+++ b/views/generic/also_by.html
@@ -4,7 +4,7 @@
     <ul class='dropdown-menu'>  
       <li class="nav-header">Website</li>
       <li><a href='http://apps.carlessangeleno.com/yogurtjam' target='_blank'><i class="icon-map-marker"></i> yogurtJam</a></li>
-      <li class="nav-header">Data Analysis</li>
+      <li class="nav-header">Data Visualization</li>
       <li><a href='http://apps.carlessangeleno.com/sociagora' target='_blank'><i class="icon-globe"></i> sociagora</a></li>
       <li><a href='http://apps.carlessangeleno.com/kivaflava' target='_blank'><i class="icon-leaf"></i> kivaFlava</a></li>
       <li class="nav-header">Everyday Tools</li>
