--- a/views/generic/also_by.html
+++ b/views/generic/also_by.html
@@ -1,6 +1,13 @@
 <ul class='nav pull-right'>        
   <li class='dropdown'>
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b><i class="icon-th icon-white"></i> carlessAngeleno</b> </a>
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+      <b>
+        {{if is_mobile:}}
+          <i class="icon-th icon-white"></i>
+        {{else:}}
+          carlessAngeleno
+        {{pass}}
+      </b> </a>
     <ul class='dropdown-menu'>  
       <li class="nav-header">Website</li>
       <li><a href='http://apps.carlessangeleno.com/yogurtjam' target='_blank'><i class="icon-map-marker"></i> yogurtJam</a></li>
