--- a/views/generic/also_by_ember.html
+++ b/views/generic/also_by_ember.html
@@ -3,7 +3,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
       <b>
         <i class="icon-th icon-white"></i>
-        <?if not is_mobile:?>
+        <?if False:?>
           carlessAngeleno
         <?pass?>         
       </b> </a>
