--- a/views/generic/also_by.html
+++ b/views/generic/also_by.html
@@ -1,26 +1,23 @@
 <ul class='nav pull-right'>        
   <li class='dropdown'>
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-      <b>
-        {{if is_mobile:}}
-          <i class="icon-th icon-white"></i>
-        {{else:}}
-          carlessAngeleno
-        {{pass}}
+      <b>        
+        <i class="icon-th icon-white"></i>
       </b> </a>
-    <ul class='dropdown-menu'>  
-      <li class="nav-header">Website</li>
-      <li><a href='http://apps.carlessangeleno.com/yogurtjam' target='_blank'><i class="icon-map-marker"></i> yogurtJam</a></li>
+    <ul class='dropdown-menu'>
+      <li class="nav-header">Web Apps</li>
+      <li><a href='//hankim.io/yogurtjam' target='_blank'><i class="icon-map-marker"></i> yogurtJam</a></li>
       <li class="nav-header">Data Visualization</li>
-      <li><a href='http://apps.carlessangeleno.com/sociagora' target='_blank'><i class="icon-globe"></i> sociagora</a></li>
-      <li><a href='http://apps.carlessangeleno.com/kivaflava' target='_blank'><i class="icon-leaf"></i> kivaFlava</a></li>
+      <li><a href='//hankim.io/sociagora' target='_blank'><i class="icon-globe"></i> sociagora</a></li>
+      <li><a href='//hankim.io/kivaflava' target='_blank'><i class="icon-leaf"></i> kivaFlava</a></li>
       <li class="nav-header">Everyday Tools</li>
-      <li><a href='http://apps.carlessangeleno.com/isthisarepost' target='_blank'><i class="icon-picture"></i> Is This A Repost</a></li>              
-      <li class="nav-header">Data Collection</li>
-      <li><a href='http://www.yogurtjam.com/twitPit/html/justice4charles.php' target='_blank'><i class="icon-bullhorn"></i> twitPit</a></li>
+      <li><a href='//hankim.io/isthisarepost' target='_blank'><i class="icon-picture"></i> Is This A Repost</a></li>              
+      <!--<li class="nav-header">Data Collection</li>
+      <li><a href='http://www.yogurtjam.com/twitPit/html/justice4charles.php' target='_blank'><i class="icon-bullhorn"></i> twitPit</a></li> -->
       <li class="divider"></li>
-      <li><a href='http://github.com/carlessAngeleno' target='_blank'><b>GitHub Profile</b></a></li>                    
-      <li><a href='http://www.carlessangeleno.com' target='_blank'><b>BLOG</b></a></li>                    
+      <li><a href='//github.com/carlessAngeleno' target='_blank'><b>GitHub</b></a></li>                    
+      <li><a href='//blog.hankim.io' target='_blank'><b>Blog</b></a></li>
+      <li><a href='//hankim.io' target='_blank'><b>Home</b></a></li>
     </ul>        
   </li>
 </ul>
