Add www to link

--- a/views/generic/also_by.html
+++ b/views/generic/also_by.html
@@ -6,18 +6,18 @@
       </b> </a>
     <ul class='dropdown-menu'>
       <li class="nav-header">Web Apps</li>
-      <li><a href='//hankim.io/yogurtjam' target='_blank'><i class="icon-map-marker"></i> yogurtJam</a></li>
+      <li><a href='//www.hankim.io/yogurtjam' target='_blank'><i class="icon-map-marker"></i> yogurtJam</a></li>
       <li class="nav-header">Data Visualization</li>
-      <li><a href='//hankim.io/sociagora' target='_blank'><i class="icon-globe"></i> sociagora</a></li>
-      <li><a href='//hankim.io/kivaflava' target='_blank'><i class="icon-leaf"></i> kivaFlava</a></li>
+      <li><a href='//www.hankim.io/sociagora' target='_blank'><i class="icon-globe"></i> sociagora</a></li>
+      <li><a href='//www.hankim.io/kivaflava' target='_blank'><i class="icon-leaf"></i> kivaFlava</a></li>
       <li class="nav-header">Everyday Tools</li>
-      <li><a href='//hankim.io/isthisarepost' target='_blank'><i class="icon-picture"></i> Is This A Repost</a></li>              
+      <li><a href='//www.hankim.io/isthisarepost' target='_blank'><i class="icon-picture"></i> Is This A Repost</a></li>              
       <!--<li class="nav-header">Data Collection</li>
       <li><a href='http://www.yogurtjam.com/twitPit/html/justice4charles.php' target='_blank'><i class="icon-bullhorn"></i> twitPit</a></li> -->
       <li class="divider"></li>
       <li><a href='//github.com/carlessAngeleno' target='_blank'><b>GitHub</b></a></li>                    
       <li><a href='//blog.hankim.io' target='_blank'><b>Blog</b></a></li>
-      <li><a href='//hankim.io' target='_blank'><b>Home</b></a></li>
+      <li><a href='//www.hankim.io' target='_blank'><b>Home</b></a></li>
     </ul>        
   </li>
 </ul>
