--- a/views/generic/also_by_ember.html
+++ b/views/generic/also_by_ember.html
@@ -15,11 +15,10 @@
       <li><a href='http://apps.carlessangeleno.com/kivaflava' target='_blank'><i class="icon-leaf"></i> kivaFlava</a></li>
       <li class="nav-header">Everyday Tools</li>
       <li><a href='http://apps.carlessangeleno.com/isthisarepost' target='_blank'><i class="icon-picture"></i> Is This A Repost</a></li>              
-      <li class="nav-header">Data Collection</li>
-      <li><a href='http://www.yogurtjam.com/twitPit/html/justice4charles.php' target='_blank'><i class="icon-bullhorn"></i> twitPit</a></li>
       <li class="divider"></li>
-      <li><a href='http://github.com/carlessAngeleno' target='_blank'><b>GitHub Profile</b></a></li>                    
-      <li><a href='http://www.carlessangeleno.com' target='_blank'><b>BLOG</b></a></li>                    
+      <li><a href='//github.com/carlessAngeleno' target='_blank'><b>GitHub Profile</b></a></li>                    
+      <li><a href='//blog.hankim.io' target='_blank'><b>Blog</b></a></li>
+      <li><a href='//www.hankim.io' target='_blank'><b>Home</b></a></li>                    
     </ul>        
   </li>
 </ul>
