Edit navbar link URL

--- a/views/generic/also_by_ember.html
+++ b/views/generic/also_by_ember.html
@@ -9,12 +9,12 @@
       </b> </a>
     <ul class='dropdown-menu'>  
       <li class="nav-header">Website</li>
-      <li><a href='http://apps.carlessangeleno.com/yogurtjam' target='_blank'><i class="icon-map-marker"></i> yogurtJam</a></li>
+      <li><a href='//www.hankim.io/yogurtjam' target='_blank'><i class="icon-map-marker"></i> yogurtJam</a></li>
       <li class="nav-header">Data Visualization</li>
-      <li><a href='http://apps.carlessangeleno.com/sociagora' target='_blank'><i class="icon-globe"></i> sociagora</a></li>
-      <li><a href='http://apps.carlessangeleno.com/kivaflava' target='_blank'><i class="icon-leaf"></i> kivaFlava</a></li>
+      <li><a href='//www.hankim.io/sociagora' target='_blank'><i class="icon-globe"></i> sociagora</a></li>
+      <li><a href='//www.hankim.io/kivaflava' target='_blank'><i class="icon-leaf"></i> kivaFlava</a></li>
       <li class="nav-header">Everyday Tools</li>
-      <li><a href='http://apps.carlessangeleno.com/isthisarepost' target='_blank'><i class="icon-picture"></i> Is This A Repost</a></li>              
+      <li><a href='//www.hankim.io/isthisarepost' target='_blank'><i class="icon-picture"></i> Is This A Repost</a></li>              
       <li class="divider"></li>
       <li><a href='//github.com/carlessAngeleno' target='_blank'><b>GitHub Profile</b></a></li>                    
       <li><a href='//blog.hankim.io' target='_blank'><b>Blog</b></a></li>
